[gd_scene load_steps=7 format=3 uid="uid://btx08072l2ttn"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_81i6f"]
[ext_resource type="FontFile" uid="uid://ch34o33lt8ea4" path="res://Assets/Fonts/PixelOperator8.ttf" id="1_rxdms"]
[ext_resource type="Theme" uid="uid://bn7tf70nor1sb" path="res://gui_menu_theme.tres" id="1_wg03p"]

[sub_resource type="LabelSettings" id="LabelSettings_eqbv1"]
line_spacing = 24.0
font = ExtResource("1_rxdms")
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_umpi1"]
line_spacing = 24.0
font = ExtResource("1_rxdms")
font_size = 48
font_color = Color(0.450648, 0.450648, 0.450648, 1)

[sub_resource type="LabelSettings" id="LabelSettings_jl25l"]
line_spacing = 24.0
font = ExtResource("1_rxdms")
font_size = 48
font_color = Color(0.45098, 0.45098, 0.45098, 1)

[node name="Menu" type="Node2D"]
script = ExtResource("1_81i6f")
metadata/_edit_horizontal_guides_ = [1026.0, 931.0]

[node name="Background" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.0334679, 0.325726, 0.229589, 1)

[node name="Buttons" type="Node2D" parent="."]

[node name="Play" type="Button" parent="Buttons"]
offset_left = 695.0
offset_top = 267.0
offset_right = 1255.0
offset_bottom = 415.0
size_flags_horizontal = 0
theme = ExtResource("1_wg03p")
text = "PLAY"

[node name="Help" type="Button" parent="Buttons"]
offset_left = 695.0
offset_top = 448.0
offset_right = 1255.0
offset_bottom = 596.0
size_flags_horizontal = 0
theme = ExtResource("1_wg03p")
text = "HELP"

[node name="Exit" type="Button" parent="Buttons"]
offset_left = 695.0
offset_top = 630.0
offset_right = 1255.0
offset_bottom = 778.0
size_flags_horizontal = 0
theme = ExtResource("1_wg03p")
text = "ABORT"

[node name="Labels" type="Node2D" parent="."]

[node name="PolyJam" type="Label" parent="Labels"]
offset_left = 1367.0
offset_top = 881.0
offset_right = 1853.0
offset_bottom = 929.0
text = "PolyJam 2025"
label_settings = SubResource("LabelSettings_eqbv1")
horizontal_alignment = 2

[node name="GGJ" type="Label" parent="Labels"]
offset_left = 1069.0
offset_top = 968.0
offset_right = 1855.0
offset_bottom = 1016.0
text = "Global Game Jam 2025"
label_settings = SubResource("LabelSettings_umpi1")
horizontal_alignment = 2

[node name="Game name" type="Label" parent="Labels"]
offset_left = 45.0
offset_top = 42.0
offset_right = 687.0
offset_bottom = 110.0
text = "BOMBELKI"
label_settings = SubResource("LabelSettings_eqbv1")

[node name="BooRocky" type="Label" parent="Labels"]
offset_left = 44.0
offset_top = 147.0
offset_right = 686.0
offset_bottom = 267.0
text = "by team BooRocky"
label_settings = SubResource("LabelSettings_jl25l")

[connection signal="pressed" from="Buttons/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Buttons/Help" to="." method="_on_help_pressed"]
[connection signal="pressed" from="Buttons/Exit" to="." method="_on_exit_pressed"]
